[package]
name = "tests-runner-fsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
tokio = { version = "1.18", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dyn-clonable = "0.9.0"
serde_json = "1.0"
chrono = {version="0.4",features = ["serde"]}